--- a/css/main.css
+++ b/css/main.css
@@ -67,19 +67,17 @@ html, body, #skrollr-body{
 	height: 100%;
 	background: url("../img/goldengate.jpg");
 	background-repeat: no-repeat;
-
+	background-size: cover;
 }
 
 @media(max-width: 700px){
 	#goldengate{
 		background-position: 85% 70%; 
-	    background-size: auto 100%;
 	}
 }
 @media(min-width: 701px){
 	#goldengate{
 		background-position: 85% 50%; 
-		background-size: auto 100%;
 	}	
 }
 
